# TestTask

./: .travis.yml  CMakeLists.txt  README.md
lib_bitesprinter/: CMakeLists.txt  bitesprinter.cpp  bitesprinter.h
lib_dupsremover/: CMakeLists.txt  string_filters.cpp  string_filters.h
lib_list/: CMakeLists.txt  list.cpp  list.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/lib_dupsremover_tests/: CMakeLists.txt  string_filters_tests.cpp  string_filters_tests.h
test/lib_list_tests/: CMakeLists.txt  list_tests.cpp  list_tests.h
